--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "design-system",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@storybook/cli": "^8.6.12",
-    "@storybook/react": "^8.6.12",
+    "@storybook/cli": "^8.0.0",
+    "@storybook/react": "^8.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -50,19 +51,19 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/addon-themes": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/preset-create-react-app": "^8.6.12",
-    "@storybook/react-webpack5": "^8.6.12",
-    "@storybook/test": "^8.6.12",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-interactions": "^8.0.0",
+    "@storybook/addon-onboarding": "^8.0.0",
+    "@storybook/addon-themes": "^8.0.0",
+    "@storybook/blocks": "^8.0.0",
+    "@storybook/preset-create-react-app": "^8.0.0",
+    "@storybook/react-webpack5": "^8.0.0",
+    "@storybook/test": "^8.0.0",
     "autoprefixer": "^10.4.21",
     "eslint-plugin-storybook": "^0.12.0",
     "postcss": "^8.5.3",
     "prop-types": "^15.8.1",
-    "storybook": "^8.6.12",
+    "storybook": "^8.0.0",
     "webpack": "^5.99.7"
   }
 }
